packages/isar_generator/test/errors/class/abstract.dart
// must not be abstract

import 'package:isar-community/isar.dart';

@collection
abstract class Model {
  Id? id;
}
